# cognitive-os

./: .gitignore  ADR-002-runtime-engine-replay-contract.md  ARCHITECTURE.md  ATTENTION_REVIEW.md  BACKEND.md  CHANGELOG.md  CIP.md  CLIPPING_ORCHESTRATOR.md  CONTRADICTION_REPAIR.md  CORPUS_FLOW_MILESTONE.md  CORRECTION_LOOPS.md  Cargo.toml  DATA_CURATION_MILESTONE.md  DESIGN_REVIEW_NOTES.md  DOCUMENT_FLOW_MILESTONE.md  DREAM_0_SEEDED_DISTORTION_ENGINE_PLAN.md  DREAM_EXPORT_0_PROVENANCE_BRIDGE_PLAN.md  DREAM_EXPORT_MILESTONE.md  ENVIRONMENT.md  EPISTEMIC_SNAPSHOT.md  FAILURE_LEDGER.md  FEATURES.csv  GOVERNANCE_MILESTONE.md  HORIZON_TRACK_MILESTONE.md  HYPOTHESIS_TRACK_MILESTONE.md  IMPLEMENTATION_NOTES.md  INTEGRATION_DEMO_MILESTONE.md  KNOWN_LIMITATIONS.md  LANGUAGE_CODEC.md  MEMORY.md  MIGRATION_NOTES.md  MULTI_TRACE_VALIDATION_MILESTONE.md  MUTATION_AUTHORITY.md  MVP_SCOPE.md  NON_GOALS.md  OPERATOR_CONTROLS_MILESTONE.md  OPERATOR_MANUAL.md  OPERATOR_RELEASE_SNAPSHOT.md  PLANNER_REGRET.md  QA_PLAN.md  (+39 more)
backend/api/: health.rs  memory.rs  packets.rs  routes.rs  traces.rs
backend/storage/: append_only_log.rs  graph_store.rs  migrations.rs  sqlite.rs
core/action/: executor.rs  outcome_recorder.rs  sandbox.rs
core/attention/: budgets.rs  coalescer.rs  modes.rs  scheduler.rs  scorer.rs
core/bus/: backpressure.rs  broker.rs  priority_queue.rs  subscriptions.rs  trace.rs
core/cip/: envelope.rs  epistemic_license.rs  packet_types.rs  permissions.rs  serialization.rs  validation.rs
core/language_codec/: internal_routing_guard.rs  (+4 more)
crates/cognitive-demo/: Cargo.toml
crates/cognitive-demo/examples/: cognitive_trace_demo.rs
crates/cognitive-demo/src/: candidate_eval.rs  controller_bridge.rs  converse.rs  corpus_harvest.rs  failure_detector.rs  game_evidence.rs  horizon.rs  learner_journal.rs  learner_memory.rs  learner_model.rs  learning_arc.rs  learning_session.rs  lib.rs  lit_intent.rs  main.rs  model_eval.rs  model_promote.rs  production_runtime.rs  production_smoke.rs  query_flow.rs  query_panorama.rs  query_select.rs  release_gate.rs  score.rs  teach_map.rs  training_attempt.rs  training_gate.rs  vault_norm.rs  wow_state.rs  wow_taskplan.rs
crates/cognitive-llam-episode/: Cargo.toml
crates/cognitive-llam-episode/src/: lib.rs  main.rs
crates/data-curator/: Cargo.toml
crates/data-curator/src/: curate.rs  hash.rs  inject.rs  lib.rs  matrix.rs  types.rs
crates/dream-engine/: Cargo.toml
crates/dream-engine/src/: lib.rs
crates/hypothesis-layer/: Cargo.toml
crates/hypothesis-layer/examples/: execution_intent_report.rs  hypothesis_report.rs  observation_receipt_report.rs  probe_queue_report.rs  promotion_request_report.rs  review_log_report.rs
crates/hypothesis-layer/src/: execution.rs  lib.rs  observation.rs  probe.rs  promotion.rs  review.rs
crates/reading-adapter/: Cargo.toml
crates/reading-adapter/examples/: baseline_report.rs
crates/reading-adapter/src/: adapter.rs  backend.rs  baseline.rs  lib.rs  local_backend.rs
crates/reading-autonomous-eval/: Cargo.toml
crates/reading-autonomous-eval/examples/: autonomous_pack_report.rs
crates/reading-autonomous-eval/src/: lib.rs  scorer.rs
crates/reading-autonomy/: Cargo.toml
crates/reading-autonomy/examples/: autonomous_read.rs
crates/reading-autonomy/src/: budgeted.rs  lib.rs  ranked.rs  reader.rs  section.rs
crates/reading-budgeted-eval/: Cargo.toml
crates/reading-budgeted-eval/examples/: budgeted_pack_report.rs
crates/reading-budgeted-eval/src/: lib.rs  scorer.rs
crates/reading-cli/: Cargo.toml
crates/reading-cli/src/: corpus_load.rs  lib.rs  main.rs
crates/reading-codec/: Cargo.toml
crates/reading-codec/examples/: eval_report.rs
crates/reading-codec/src/: codec.rs  error.rs  evaluator.rs  lib.rs  parse.rs  policy.rs
crates/reading-corpus-eval/: Cargo.toml
crates/reading-corpus-eval/examples/: pack_report.rs
crates/reading-corpus-eval/src/: lib.rs  pack.rs  scorer.rs
crates/reading-eval/: Cargo.toml
crates/reading-eval/examples/: eval_report.rs
crates/reading-eval/src/: fixtures.rs  lib.rs  scorer.rs
crates/reading-ranked-eval/: Cargo.toml
crates/reading-ranked-eval/examples/: ranked_pack_report.rs
crates/reading-ranked-eval/src/: lib.rs  scorer.rs
crates/reading-section-eval/: Cargo.toml
crates/reading-section-eval/examples/: section_pack_report.rs
crates/reading-section-eval/src/: lib.rs  scorer.rs
crates/reading-substrate/: Cargo.toml
crates/reading-substrate/src/: corpus.rs  lib.rs  memory.rs  trace.rs  verify.rs
crates/reading-train-gate/: Cargo.toml
crates/reading-train-gate/examples/: decision_report.rs
crates/reading-train-gate/src/: decision.rs  lib.rs
crates/vibe-cli/: Cargo.toml
crates/vibe-cli/src/: lib.rs  main.rs
crates/vibe-core/: Cargo.toml
crates/vibe-core/src/: kernel.rs  lib.rs
crates/vibe-frame/: Cargo.toml
crates/vibe-frame/src/: collector.rs  lib.rs
crates/vibe-ingress/: Cargo.toml
crates/vibe-ingress/src/: gate.rs  lib.rs
crates/vibe-run/: Cargo.toml
crates/vibe-run/src/: lib.rs  runner.rs
crates/vibe-scheduler/: Cargo.toml
crates/vibe-scheduler/src/: lib.rs  scheduler.rs
docs/: PLATEAU-0.md  PLATEAU-1.md  PRODUCTION_RUNTIME_RUNBOOK.md  PROJECT_CHARTER.md  RELEASE_NOTES_v0.1.md  RELEASE_RUNBOOK.md
scripts/: attention_manager.py  attention_review_audit.py  author_governed_signers.py  author_mechanism_scenarios.py  backend_api.py  backend_storage.py  bootstrap_ingest.py  bridge_world_demo.py  change_provenance.py  cip_bus.py  clipping_orchestrator.py  contradiction_audit.py  dashboard_smoke.py  decision_audit.py  design_audit.py  design_signing.py  dev.sh  effect_classifier.py  epistemic_snapshot.py  governed_memory.py  ingest_experience.py  language_codec.py  lint.sh  mechanism_provenance.py  mutation_audit.py  mutation_gateway.py  operator_smoke.sh  planner_regret_audit.py  project_self_audit.py  qa_checks.py  raw_episode_store.py  recovery_replay.py  release_check.sh  replay_asymmetric_key.py  replay_key.py  retrieval_policy.py  rule_cascade.py  seed_demo.sh  semantic_candidate_extractor.py  test.sh  (+5 more)
(+159 files in other folders)
