# Cognitive OS engine workspace. Members are added per ADR-002 layer:
#   crates/vibe-core — L0 deterministic replay kernel (P1)
# L1 ingress/scheduling/frames (P2–P4), L2 record/replay (P6), and the CLI (P7)
# join as new crates in later sprints.
[workspace]
resolver = "2"
members = [
    "crates/vibe-core",
    "crates/vibe-ingress",
    "crates/vibe-scheduler",
    "crates/vibe-frame",
    "crates/vibe-run",
    "crates/vibe-cli",
    "crates/reading-substrate",
    "crates/reading-codec",
    "crates/reading-adapter",
    "crates/reading-eval",
    "crates/reading-train-gate",
    "crates/reading-cli",
    "crates/reading-corpus-eval",
    "crates/reading-autonomy",
    "crates/reading-autonomous-eval",
    "crates/reading-budgeted-eval",
    "crates/reading-ranked-eval",
    "crates/reading-section-eval",
    "crates/hypothesis-layer",
    "crates/cognitive-demo",
    "crates/dream-engine",
]
