[package]
name = "cognitive-demo"
version = "0.1.0"
edition = "2021"
description = "INT-0 — end-to-end prototype trace demo: one deterministic, replayable, verifier-checked trace that connects the frozen reading receipt to the frozen hypothesis/probe/review/intent/observation/promotion-refusal chain. It grants no authority, executes no probe, promotes nothing, and trains nothing."
license = "MIT OR Apache-2.0"
publish = false

# INT-0 is the FIRST integration layer: a thin, deterministic demo that CONSUMES the
# already-frozen reading track (reading-cli @ reading-track-v0.1) and hypothesis track
# (hypothesis-layer @ hypothesis-track-v0.1) through their PUBLIC APIs and records ONE
# auditable end-to-end trace. It adds no capability: it reads receipt hashes, proposes,
# classifies, reviews, records intent, quarantines, and REFUSES promotion — and nothing
# else. It depends on reading-cli (the read0 pipeline, for a verifier-approved receipt),
# hypothesis-layer (the proposer chain), and reading-train-gate (to RECORD that the P12
# verdict is unmoved by the whole flow). No machine-learning or model-execution
# framework, no vibe engine crate — release_check asserts the dependency boundary,
# the crate purity, and the trace's own refusals (no execution, no evidence, no training).
#
# INT-1 adds an operator CLI (the `cognitive-demo` binary): `trace` writes the canonical JSON,
# `report` renders a plain operator report, `replay` confirms a byte-identical reproduction. The
# binary is ONLY an I/O shell — std::fs lives in src/main.rs alone; all logic stays in the pure lib.
[[bin]]
name = "cognitive-demo"
path = "src/main.rs"

[dependencies]
# DREAM-EXPORT-0 consumes the PUBLIC terminal DreamPacket from dream-engine and BRIDGES it into the
# existing hypothesis-only proposal path. The arrow is demo -> engine, so dream-engine's own quarantine
# tree (no hypothesis-layer / no integration crate) is unchanged — release_check asserts both directions.
dream-engine = { path = "../dream-engine" }
hypothesis-layer = { path = "../hypothesis-layer" }
reading-cli = { path = "../reading-cli" }
reading-substrate = { path = "../reading-substrate" }
reading-train-gate = { path = "../reading-train-gate" }
# HORIZON-0 composes the EXISTING DATA-0 curation gate into staged horizons (H1/H2/H5 curate candidate data
# BEFORE a read or export). The arrow is demo -> curator only: data-curator depends on serde ALONE and reaches
# NO workspace crate, so it cannot acquire the Authority type, the training gate, or any engine/memory crate —
# its own isolation (release_check asserts data-curator's tree has no vibe-/reading-/hypothesis-layer/
# cognitive-demo/dream-engine edge) is unchanged by this one-way dependency.
data-curator = { path = "../data-curator" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
