[package]
name = "cognitive-llam-episode"
version = "0.1.0"
edition = "2021"
description = "Typed Cognitive OS producer/consumer boundary for replayable, non-authoritative LLAM preview episodes"
license = "MIT OR Apache-2.0"
publish = false

[[bin]]
name = "cognitive-llam"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
