[package]
name = "vibe-frame"
version = "0.1.0"
edition = "2021"
description = "ADR-002 layer-L1 frame collection (FrameCollector + canonical ObservationFrame) for Cognitive OS"
license = "MIT OR Apache-2.0"
publish = false

# Folds scheduled observations for one tick into a canonical, hash-stable frame.
# Uses only workspace value types; no backend/network/async crates. release_check
# asserts the dependency tree is exactly the four workspace crates.
#
# P5 promotes this canonical ObservationFrame into vibe-core (L0) and rewires the
# engine to consume it, retiring the P1 stub frame; in P4 it lives here (L1).
[dependencies]
vibe-core = { path = "../vibe-core" }
vibe-ingress = { path = "../vibe-ingress" }
vibe-scheduler = { path = "../vibe-scheduler" }
